remove repeated topography data loading

--- a/FWI_realizations.ipynb
+++ b/FWI_realizations.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,16 +47,7 @@
     "]\n",
     "split = \"test\"\n",
     "# subset_idxs = [2904, 5856] # Only select May 1 to Aug 31\n",
-    "subset_idxs = [5000, 5100]  # Use all data\n",
-    "\n",
-    "# Topography data\n",
-    "\n",
-    "path_topography_lr = os.path.join(base_path, f\"invariant/topography/lr_invariant/topography.pt\")\n",
-    "path_topography_hr = os.path.join(base_path, f\"invariant/topography/hr_invariant/topography.pt\")\n",
-    "topography_lr = torch.load(path_topography_lr).float().unsqueeze(0).unsqueeze(0)\n",
-    "topography_hr = torch.load(path_topography_hr).float().unsqueeze(0).unsqueeze(0)\n",
-    "\n",
-    "print(topography_lr.shape, topography_hr.shape)"
+    "subset_idxs = [5000, 5100]  # Use all data"
    ]
   },
   {
